se agregan etiquetas figure $ figcaptions

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <header>
-        <img src="../img/logo-mighty-ducks-01.png" alt="logo" width="200px">
+        <figure>
+            <img src="../img/logo-mighty-ducks-01.png" alt="logo" width="200px">
+            <figcaption>Fotos reales de Hockey</figcaption>
+        </figure>
         
         <nav>
             <ul>
