--- a/templates/aboutMDHL.html
+++ b/templates/aboutMDHL.html
@@ -8,8 +8,11 @@
 </head>
 <body>
     <header>
-        <img src="../img/logo-mighty-ducks-01.png" alt="logo" width="200px">
-        
+        <figure>
+            <img src="../img/logo-mighty-ducks-01.png" alt="logo" width="200px">
+            <figcaption>Fotos reales de Hockey</figcaption>
+        </figure>
+
         <nav>
             <ul>
                 <li><a href="../index.html">Home</a></li>
