se cambiar de lugar las tags figure y figcaption

--- a/templates/aboutMDHL.html
+++ b/templates/aboutMDHL.html
@@ -8,11 +8,9 @@
 </head>
 <body>
     <header>
-        <figure>
-            <img src="../img/logo-mighty-ducks-01.png" alt="logo" width="200px">
-            <figcaption>Fotos reales de Hockey</figcaption>
-        </figure>
-
+        
+        <img src="../img/logo-mighty-ducks-01.png" alt="logo" width="200px">
+        
         <nav>
             <ul>
                 <li><a href="../index.html">Home</a></li>
@@ -26,7 +24,10 @@
 
     <main>
         <article>
-            <img src="../img/hockey2.jpg" alt="logo" width="200px">
+            <figure>
+                <img src="../img/hockey2.jpg" alt="hockey2" width="200px">
+                <figcaption>Fotos reales de Hockey</figcaption>
+            </figure>
 
             <h2>Mission</h2>
             <p>To support young athletes living Chicago's northside neighborhood, who have an interest in
