--- a/templates/contact.html
+++ b/templates/contact.html
@@ -12,7 +12,7 @@
             <img src="../img/logo-mighty-ducks-01.png" alt="logo" width="200px">
             <figcaption>Fotos reales de Hockey</figcaption>
         </figure>
-        
+
         <nav>
             <ul>
                 <li><a href="../index.html">Home</a></li>
@@ -25,7 +25,12 @@
     </header>
 
     <section>
-        <img src="../img/hockey3.jpg" alt="logo" width="200px">
+        
+        <figure>
+            <img src="../img/hockey3.jpg" alt="hockey3" width="200px">
+            <figcaption>Fotos reales de Hockey</figcaption>
+        </figure>
+
         <p>Please email us at mdhl@chihockey.org</p>
         <p>We reply to your email as soon as we can.</p>
     </section>
