--- a/templates/contact.html
+++ b/templates/contact.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <header>
+
         <figure>
-            <img src="../img/logo-mighty-ducks-01.png" alt="logo" width="200px">
-            <figcaption>Fotos reales de Hockey</figcaption>
+            <img src="../img/logo-mighty-ducks-01.png" alt="logo" width="200">
         </figure>
 
         <nav>
@@ -27,7 +27,7 @@
     <section>
         
         <figure>
-            <img src="../img/hockey3.jpg" alt="hockey3" width="200px">
+            <img src="../img/hockey3.jpg" alt="hockey3" width="200">
             <figcaption>Fotos reales de Hockey</figcaption>
         </figure>
 
