--- a/templates/aboutMDHL.html
+++ b/templates/aboutMDHL.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <header>
-        
-        <img src="../img/logo-mighty-ducks-01.png" alt="logo" width="200px">
+
+        <figure>
+            <img src="../img/logo-mighty-ducks-01.png" alt="logo" width="200">
+        </figure>
         
         <nav>
             <ul>
@@ -25,7 +27,7 @@
     <main>
         <article>
             <figure>
-                <img src="../img/hockey2.jpg" alt="hockey2" width="200px">
+                <img src="../img/hockey2.jpg" alt="hockey2" width="200">
                 <figcaption>Fotos reales de Hockey</figcaption>
             </figure>
 
