se linkean los estilos con los html

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mighty Ducks Hockey League</title>
 </head>
+
 <body>
     <header>
 
@@ -20,20 +22,20 @@
                 <li><a href="./contact.html">Contact</a></li>
             </ul>
         </nav>
-        
+
         <h1>Mighty Ducks Hockey League</h1>
     </header>
 
     <section>
-        
+
         <figure>
             <img src="../assets/images/hockey3.jpg" alt="hockey3" width="200">
-            <figcaption>Fotos reales de Hockey</figcaption>
         </figure>
 
-        <p>Please email us at mdhl@chihockey.org</p>
+        <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
         <p>We reply to your email as soon as we can.</p>
     </section>
-    
+
 </body>
+
 </html>
