--- a/templates/aboutMDHL.html
+++ b/templates/aboutMDHL.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mighty Ducks Hockey League</title>
 </head>
+
 <body>
     <header>
 
         <figure>
             <img src="../assets/images/logo-mighty-ducks-01.png" alt="logo" width="200">
         </figure>
-        
+
         <nav>
             <ul>
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="./aboutMDHL.html">About MDHL</a></li> <!--preguntar cual es mejor # or ./aboutMDHL.html-->
+                <li><a href="#">About MDHL</a></li>
                 <li><a href="../templates/contact.html">Contact</a></li>
             </ul>
         </nav>
-        
+
         <h1>Mighty Ducks Hockey League</h1>
     </header>
 
@@ -28,7 +30,6 @@
         <article>
             <figure>
                 <img src="../assets/images/hockey2.jpg" alt="hockey2" width="200">
-                <figcaption>Fotos reales de Hockey</figcaption>
             </figure>
 
             <h2>Mission</h2>
@@ -43,9 +44,10 @@
                 Chicago's northside neighborhoods an environment in which to learn and play hockey. To be a
                 member of MDHL, you must be between the ages of 4 - 12 and reside a Chicago northside
                 neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of
-                parents and previous league members</p> 
+                parents and previous league members</p>
         </article>
-    </main>    
-    
+    </main>
+
 </body>
+
 </html>
