--- a/templates/contact.html
+++ b/templates/contact.html
@@ -5,6 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- estilos de diseño N°1 -->
+    <link rel="stylesheet" href="../assets/styles/design1.css">
+    <!-- Estilos ocultos -->
+    <!-- estilos de diseño N°2 -->
+    <!--<link rel="stylesheet" href="../assets/styles/design2.css"> -->
+    <!-- estilos de diseño N°3 -->
+    <!--<link rel="stylesheet" href="../assets/styles/design3.css"> -->
     <title>Mighty Ducks Hockey League</title>
 </head>
 
@@ -22,11 +29,10 @@
                 <li><a href="./contact.html">Contact</a></li>
             </ul>
         </nav>
-
         <h1>Mighty Ducks Hockey League</h1>
     </header>
 
-    <section>
+    <main>
 
         <figure>
             <img src="../assets/images/hockey3.jpg" alt="hockey3" width="200">
@@ -34,7 +40,7 @@
 
         <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
         <p>We reply to your email as soon as we can.</p>
-    </section>
+    </main>
 
 </body>
 
