--- a/templates/aboutMDHL.html
+++ b/templates/aboutMDHL.html
@@ -5,6 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- estilos de diseño N°1 -->
+    <link rel="stylesheet" href="../assets/styles/design1.css">
+    <!-- Estilos ocultos-->
+    <!-- estilos de diseño N°2 -->
+    <!--<link rel="stylesheet" href="../assets/styles/design2.css">-->
+    <!-- estilos de diseño N°3 -->
+    <!--<link rel="stylesheet" href="../assets/styles/design3.css">-->
     <title>Mighty Ducks Hockey League</title>
 </head>
 
