--- a/templates/contact.html
+++ b/templates/contact.html
@@ -19,7 +19,7 @@
     <header>
 
         <figure>
-            <img src="../assets/images/logo-mighty-ducks-01.png" alt="logo" width="200">
+            <img src="../assets/images/logo-mighty-ducks-01.png" alt="logo">
         </figure>
 
         <nav>
@@ -35,7 +35,7 @@
     <main>
 
         <figure>
-            <img src="../assets/images/hockey3.jpg" alt="hockey3" width="200">
+            <img src="../assets/images/hockey3.jpg" alt="hockey3">
         </figure>
 
         <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
