--- a/assets/styles/design1.css
+++ b/assets/styles/design1.css
@@ -1,6 +1,6 @@
-*{
-    margin:0;
-    padding:0;
+* {
+    margin: 0;
+    padding: 0;
     box-sizing: 0;
     font-family: 'Comic Neue', cursive;
 }
@@ -10,80 +10,95 @@
     width: 100%;
     position: relative;
 }
-.banner img{
+
+.banner img {
     width: 100%;
     height: 300px;
-    object-fit:cover;
+    object-fit: cover;
 }
 
-h1{
-    position:absolute;
-    top:0;
+h1 {
+    position: absolute;
+    top: 0;
 }
 
-.subtitle{
+.subtitle {
     position: relative;
-    background:black;
+    background: black;
 }
 
-h2{
-    color:white;
+h2 {
+    color: white;
     height: 50px;
     text-align: center;
     padding-top: 2.5vh;
 }
 
-.logo{
+.logo {
     position: absolute;
     right: 10%;
     top: -90%;
 }
 
 .logo img {
-    height:150px;
+    height: 150px;
     width: 150px;
 }
 
-nav ul{
+nav ul {
     list-style: none;
 }
 
-nav ul li a{
-    color:blue;
+nav ul li a {
+    color: blue;
+    padding: 0;
 }
 
-nav ul li{
-    padding: 15px;
+nav ul li {
+    padding: 5px 25px 25px 5px;
+    box-sizing: border-box;
 }
 
-nav a:hover{
+nav a:hover {
     text-decoration: none;
-    color: black; 
+    color: black;
 }
 
-.container-nav-main{
-    display:flex;
+.container-nav-main {
+    display: flex;
     margin: 4vh;
 }
 
 nav {
     width: 15%;
-    padding:2vh;
+    padding: 2vh;
     align-self: center;
 }
 
-
 main {
-    width: 35%;
-    padding:2vh;
+    width: 45%;
+    padding: 2vh;
 }
 
-.img-hockey{
-    text-align:center;
-    width: 50%;
-    padding:2vh;
+main article p{
+    margin-bottom: 1vh;
 }
 
-.img-hockey img{
+.img-hockey {
+    text-align: center;
+    width: 40%;
+    padding: 2vh;
+    align-self: center;
+}
+
+.img-hockey img {
     max-height: 150px;
+}
+
+p{
+    text-indent: 12px;
+}
+
+h3{
+    font-style: italic;
 }
