--- a/templates/aboutMDHL.html
+++ b/templates/aboutMDHL.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">    <!-- estilos de diseño N°1 -->
+    <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
     <!-- estilos de diseño N°1 -->
     <link rel="stylesheet" href="../assets/styles/design1.css">
     <!-- Estilos ocultos-->
@@ -17,44 +19,45 @@
 
 <body>
     <header>
-
-        <figure>
-            <img src="../assets/images/logo-mighty-ducks-01.png" alt="logo">
-        </figure>
-
+        <section class="banner">
+        </section>
+        <h1>Mighty Ducks Hockey League</h1>
+        <section class="subtitle">
+            <h2>About MDHL</h2>
+            <figure class="logo">
+                <img src="../assets/images/logo-mighty-ducks-01.png" alt="logo">
+            </figure>
+        </section>
+    </header>
+    <section class="container-nav-main">
         <nav>
             <ul>
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="#">About MDHL</a></li>
+                <li><a href="#" class="a-about">About MDHL</a></li>
                 <li><a href="../templates/contact.html">Contact</a></li>
             </ul>
         </nav>
-
-        <h1>Mighty Ducks Hockey League</h1>
-    </header>
-
-    <main>
-        <article>
-            <figure>
-                <img src="../assets/images/hockey2.jpg" alt="hockey2">
-            </figure>
-
-            <h3>Mission</h3>
-            <p> To support young athletes living Chicago's northside neighborhood, who have an interest in
-                learning and playing soccer, with opportunities to learn and practice skills related to the game of
-                hockey, specifically those skills around team cooperation and good sportsmanship</p>
-            <h3>Vision</h3>
-            <p>The Mighty Ducks Hockey League aspires to develop strong, well-rounded and mindful athletes
-                through the building of character, self-discipline, and leadership.</p>
-            <h3>General Information</h3>
-            <p> The Mighty Ducks Soccer League was established in 1996 to provide athletes residing
-                Chicago's northside neighborhoods an environment in which to learn and play hockey. To be a
-                member of MDHL, you must be between the ages of 4 - 12 and reside a Chicago northside
-                neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of
-                parents and previous league members</p>
-        </article>
-    </main>
-
+        <main>
+            <article>
+                <h3>Mission</h3>
+                <p> To support young athletes living Chicago's northside neighborhood, who have an interest in
+                    learning and playing soccer, with opportunities to learn and practice skills related to the game of
+                    hockey, specifically those skills around team cooperation and good sportsmanship</p>
+                <h3>Vision</h3>
+                <p>The Mighty Ducks Hockey League aspires to develop strong, well-rounded and mindful athletes
+                    through the building of character, self-discipline, and leadership.</p>
+                <h3>General Information</h3>
+                <p> The Mighty Ducks Soccer League was established in 1996 to provide athletes residing
+                    Chicago's northside neighborhoods an environment in which to learn and play hockey. To be a
+                    member of MDHL, you must be between the ages of 4 - 12 and reside a Chicago northside
+                    neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of
+                    parents and previous league members</p>
+            </article>
+        </main>
+        <figure class="img-hockey">
+            <img src="../assets/images/hockey2.jpg" alt="hockey2">
+        </figure>    
+    </section>
 </body>
 
 </html>
