--- a/templates/contact.html
+++ b/templates/contact.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">    <!-- estilos de diseño N°1 -->
+    <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
     <!-- estilos de diseño N°1 -->
     <link rel="stylesheet" href="../assets/styles/design1.css">
     <!-- Estilos ocultos -->
@@ -14,34 +16,34 @@
     <!--<link rel="stylesheet" href="../assets/styles/design3.css"> -->
     <title>Mighty Ducks Hockey League</title>
 </head>
-
 <body>
     <header>
-
-        <figure>
-            <img src="../assets/images/logo-mighty-ducks-01.png" alt="logo">
-        </figure>
-
+        <section class="banner">
+        </section>
+        <h1>Mighty Ducks Hockey League</h1>
+        <section class="subtitle">
+            <h2>Contact</h2>
+            <figure class="logo">
+                <img src="../assets/images/logo-mighty-ducks-01.png" alt="logo">
+            </figure>
+        </section>
+    </header>
+    <section class="container-nav-main">
         <nav>
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="../templates/aboutMDHL.html">About MDHL</a></li>
-                <li><a href="./contact.html">Contact</a></li>
+                <li><a href="#" class="a-contact">Contact</a></li>
             </ul>
         </nav>
-        <h1>Mighty Ducks Hockey League</h1>
-    </header>
-
-    <main>
-
-        <figure>
+        <main>
+            <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
+            <p>We reply to your email as soon as we can.</p>
+        </main>
+        <figure class="img-hockey">
             <img src="../assets/images/hockey3.jpg" alt="hockey3">
         </figure>
-
-        <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
-        <p>We reply to your email as soon as we can.</p>
-    </main>
-
+    </section>    
 </body>
 
 </html>
