--- a/templates/aboutMDHL.html
+++ b/templates/aboutMDHL.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>    
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">    <!-- estilos de diseño N°1 -->
     <link rel="shortcut icon" href="../assets/images/logo.ico" type="image/x-icon">
     <!-- estilos de diseño N°1 -->
-    <link rel="stylesheet" href="../assets/styles/design1.css">
-    <!-- Estilos ocultos-->
+    <!-- <link rel="stylesheet" href="../assets/styles/design1.css"> -->
     <!-- estilos de diseño N°2 -->
-    <!--<link rel="stylesheet" href="../assets/styles/design2.css">-->
+    <link rel="stylesheet" href="../assets/styles/design2.css">
     <!-- estilos de diseño N°3 -->
     <!--<link rel="stylesheet" href="../assets/styles/design3.css">-->
     <title>Mighty Ducks Hockey League</title>
