--- a/templates/aboutMDHL.html
+++ b/templates/aboutMDHL.html
@@ -24,7 +24,7 @@
         </section>
         <h1>Mighty Ducks Hockey League</h1>
         <section class="subtitle">
-            <h2>About MDHL</h2>
+            <h2>About <span>MDHL</span></h2>
             <figure class="logo">
                 <img src="../assets/images/logo-mighty-ducks-01.png" alt="logo">
             </figure>
@@ -34,7 +34,7 @@
         <nav>
             <ul>
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="#" class="a-about">About MDHL</a></li>
+                <li><a href="#" class="a-about">About <span>MDHL</span></a></li>
                 <li><a href="../templates/contact.html">Contact</a></li>
             </ul>
         </nav>
