--- a/templates/contact.html
+++ b/templates/contact.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">    <!-- estilos de diseño N°1 -->
     <link rel="shortcut icon" href="../assets/images/logo.ico" type="image/x-icon">
     <!-- estilos de diseño N°1 -->
-    <link rel="stylesheet" href="../assets/styles/design1.css">
+    <!-- <link rel="stylesheet" href="../assets/styles/design1.css"> -->
     <!-- Estilos ocultos -->
     <!-- estilos de diseño N°2 -->
     <link rel="stylesheet" href="../assets/styles/design2.css">
@@ -34,7 +34,7 @@
         <nav>
             <ul>
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="../templates/aboutMDHL.html">About MDHL</a></li>
+                <li><a href="../templates/aboutMDHL.html">About <span>MDHL</span></a></li>
                 <li><a href="#" class="a-contact">Contact</a></li>
             </ul>
         </nav>
