--- a/assets/styles/design2.css
+++ b/assets/styles/design2.css
@@ -9,9 +9,10 @@
     height: 300px;
     width: 100%;
     position: relative;
-    background-image: url(../images/design1_image1.jpg);
+    background-image: url(../images/design1_image2.jpg);
     background-position: center;
     background-size: cover;
+    top: 84px;
 }
 
 .banner img {
@@ -21,25 +22,32 @@
 
 h1 {
     position: absolute;
-    top: 0;
+    top: 3px;
+    font-style: italic;
+    font-size:75px;
 }
 
 .subtitle {
     position: relative;
-    background: black;
+    top: 29px;
+    border: solid black 1px;
+    background-color: #fff;
+}
+
+.subtitle span{
+    display: none;
 }
 
 h2 {
-    color: white;
-    height: 50px;
+    height: 40px;
     text-align: center;
     padding-top: 2.5vh;
 }
 
 .logo {
     position: absolute;
-    right: 10%;
-    top: -90%;
+    left: 4%;
+    transform: translateY(20px);
 }
 
 .logo img {
@@ -47,38 +55,51 @@ h2 {
     width: 150px;
 }
 
+nav {
+    padding: 2vh;
+    translate: 970px -345px;
+    position: absolute;
+}
+
 nav ul {
     list-style: none;
 }
 
 nav ul li {
-    padding: 5px 25px 25px 5px;
     box-sizing: border-box;
+    display: inline-block;
 }
 
 nav ul li a {
-    color: blue;
-    padding: 0;
+    color: white;
+    font-weight: bold;
+    background-color:#4474c4;
+    text-decoration:none;
+    border: solid black 1px;
+    padding:3px 15px 3px 15px;
+}
+
+nav ul li a span{
+    display: none;
+}
+
+.a-home, .a-about, .a-contact{
+    color: white;
+    font-weight: bold;
+    text-decoration:none;
+    background-color:#74ac44;
 }
 
 .container-nav-main {
-    margin: 4vh;
+    margin: 30px;
+    margin-top: 50px;
     position: relative;
-}
-
-nav {
-    width: 15%;
-    padding: 2vh;
-    align-self: center;
-    position: absolute;
-    display: inline-block;
 }
 
 main {
     width: 55%;
     padding: 2vh;
     position: absolute;
-    display: inline-block;
     left: 20%;
 }
 
@@ -88,26 +109,21 @@ main article p{
 
 .img-hockey {
     position: absolute;
-    display: inline-block;
-    text-align: center;
-    width: 50%;
-    padding: 2vh;
-    left: 60%;
+    display: inline;
+    width: 180px;
+    padding: 25px;
+    right: 10px;
 }
 
 .img-hockey img {
-    max-height: 150px;
+    height: 150px;
 }
 
 p{
     text-indent: 12px;
+    padding-bottom: 20px;
 }
 
 h3{
     font-style: italic;
-}
-
-.a-home, .a-about, .a-contact{
-    color: black;
-    text-decoration:none;
 }
