--- a/templates/aboutMDHL.html
+++ b/templates/aboutMDHL.html
@@ -12,17 +12,17 @@
     <!-- estilos de diseño N°1 -->
     <!-- <link rel="stylesheet" href="../assets/styles/design1.css"> -->
     <!-- estilos de diseño N°2 -->
-    <link rel="stylesheet" href="../assets/styles/design2.css">
+    <!-- <link rel="stylesheet" href="../assets/styles/design2.css"> -->
     <!-- estilos de diseño N°3 -->
-    <!--<link rel="stylesheet" href="../assets/styles/design3.css">-->
+    <link rel="stylesheet" href="../assets/styles/design3.css">
     <title>Mighty Ducks Hockey League</title>
 </head>
 
 <body>
     <header>
         <section class="banner">
+            <h1 class="h1">Mighty Ducks Hockey League</h1>
         </section>
-        <h1>Mighty Ducks Hockey League</h1>
         <section class="subtitle">
             <h2>About <span>MDHL</span></h2>
             <figure class="logo">
@@ -30,7 +30,7 @@
             </figure>
         </section>
     </header>
-    <section class="container-nav-main">
+    <div class="container-nav-main">
         <nav>
             <ul>
                 <li><a href="../index.html">Home</a></li>
@@ -38,27 +38,28 @@
                 <li><a href="../templates/contact.html">Contact</a></li>
             </ul>
         </nav>
-        <main>
-            <article>
-                <h3>Mission</h3>
-                <p> To support young athletes living Chicago's northside neighborhood, who have an interest in
-                    learning and playing soccer, with opportunities to learn and practice skills related to the game of
-                    hockey, specifically those skills around team cooperation and good sportsmanship</p>
-                <h3>Vision</h3>
-                <p>The Mighty Ducks Hockey League aspires to develop strong, well-rounded and mindful athletes
-                    through the building of character, self-discipline, and leadership.</p>
-                <h3>General Information</h3>
-                <p> The Mighty Ducks Soccer League was established in 1996 to provide athletes residing
-                    Chicago's northside neighborhoods an environment in which to learn and play hockey. To be a
-                    member of MDHL, you must be between the ages of 4 - 12 and reside a Chicago northside
-                    neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of
-                    parents and previous league members</p>
-            </article>
-        </main>
         <figure class="img-hockey">
             <img src="../assets/images/hockey2.jpg" alt="hockey2">
         </figure>    
-    </section>
+    </div>
+    <main>
+        <article>
+            <h3>Mission</h3>
+            <p> To support young athletes living Chicago's northside neighborhood, who have an interest in
+                learning and playing soccer, with opportunities to learn and practice skills related to the game of
+                hockey, specifically those skills around team cooperation and good sportsmanship</p>
+            <h3>Vision</h3>
+            <p>The Mighty Ducks Hockey League aspires to develop strong, well-rounded and mindful athletes
+                through the building of character, self-discipline, and leadership.</p>
+            <h3>General Information</h3>
+            <p> The Mighty Ducks Soccer League was established in 1996 to provide athletes residing
+                Chicago's northside neighborhoods an environment in which to learn and play hockey. To be a
+                member of MDHL, you must be between the ages of 4 - 12 and reside a Chicago northside
+                neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of
+                parents and previous league members</p>
+        </article>
+    </main>
+
 </body>
 
 </html>
