--- a/templates/contact.html
+++ b/templates/contact.html
@@ -13,16 +13,16 @@
     <!-- <link rel="stylesheet" href="../assets/styles/design1.css"> -->
     <!-- Estilos ocultos -->
     <!-- estilos de diseño N°2 -->
-    <link rel="stylesheet" href="../assets/styles/design2.css">
+    <!-- <link rel="stylesheet" href="../assets/styles/design2.css"> -->
     <!-- estilos de diseño N°3 -->
-    <!--<link rel="stylesheet" href="../assets/styles/design3.css"> -->
+    <link rel="stylesheet" href="../assets/styles/design3.css">
     <title>Mighty Ducks Hockey League</title>
 </head>
 <body>
     <header>
         <section class="banner">
+            <h1 class="h1">Mighty Ducks Hockey League</h1>
         </section>
-        <h1>Mighty Ducks Hockey League</h1>
         <section class="subtitle">
             <h2>Contact</h2>
             <figure class="logo">
@@ -30,7 +30,7 @@
             </figure>
         </section>
     </header>
-    <section class="container-nav-main">
+    <div class="container-nav-main">
         <nav>
             <ul>
                 <li><a href="../index.html">Home</a></li>
@@ -38,14 +38,15 @@
                 <li><a href="#" class="a-contact">Contact</a></li>
             </ul>
         </nav>
-        <main>
-            <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
-            <p>We reply to your email as soon as we can.</p>
-        </main>
         <figure class="img-hockey">
             <img src="../assets/images/hockey3.jpg" alt="hockey3">
         </figure>
-    </section>    
+    </div>
+    <main>
+        <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
+        <p>We reply to your email as soon as we can.</p>
+    </main>
+
 </body>
 
 </html>
