--- a/assets/styles/design3.css
+++ b/assets/styles/design3.css
@@ -133,6 +133,8 @@ main {
     left: 20%;
     border-left: solid gray 1px;
     border-right: solid gray 1px;
+    /* rama3 */
+    /* background-image: url(../images/hockey3.jpg); */
 }
 
 main article p{
