--- a/templates/gameInfo.html
+++ b/templates/gameInfo.html
@@ -87,10 +87,28 @@
                     <td>9:30 a.m.</td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td>9/15</td>
                     <td>U3 and U5</td>
                     <td>AJ Katzenmaier</td>
                     <td>1:00 p.m.</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>U1 and U3</td>
+                    <td>South</td>
+                    <td>9:30 a.m.</td>
+                </tr>
+                <tr>
+                    <td>9/22</td>
+                    <td>U2 and U6</td>
+                    <td>Howard A Yeager</td>
+                    <td>1:00 p.m.</td>
+                </tr>
+                <tr>
+                    <td>9/29</td>
+                    <td>U4 and U5</td>
+                    <td>Greenbay</td>
+                    <td>9:30 p.m.</td>
                 </tr>
             </table>
 
