cambios en  table

--- a/assets/styles/design3.css
+++ b/assets/styles/design3.css
@@ -86,42 +86,17 @@ nav {
     left:920px;
 }
 
-nav ul {
-    list-style: none;
-}
-
-nav ul li {
-    box-sizing: border-box;
-    display: inline-block;
-    margin-left: 20px;
-}
-
-nav ul li a span{
-    display: none;
-}
-
-nav ul li a {
-    color: white;
-    font-weight: bold;
-    background-color:#5ca49c;
-    text-decoration:none;
-    border: solid red 1px;
-    padding:3px 15px 3px 15px;
-}
-
-nav ul li a:hover {
-    background-color: #fbe42c;
-    font-size:large;
-    color:black;
-    border: solid red 2px;
+nav a{
+    color:#fbe42c;
+    text-decoration: none;
+    padding: 5px;
 }
 
 
-.a-home, .a-about, .a-contact{
-    color: white;
-    font-weight: bold;
-    text-decoration:none;
-    background-color:#5ca49c;
+nav a:hover{
+    color:#ffff;
+    border-bottom: solid #ffff 2px ;
+    padding: 5px;
 }
 
 .container-nav-main {
