cambios por observaciones de tutor: espacios y section x div

--- a/templates/aboutMDHL.html
+++ b/templates/aboutMDHL.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,18 +16,17 @@
     <link rel="stylesheet" href="../assets/styles/design3.css">
     <title>Mighty Ducks Hockey League</title>
 </head>
-
 <body>
     <header>
-        <section class="banner">
+        <div class="banner">
             <h1 class="h1">Mighty Ducks Hockey League</h1>
-        </section>
-        <section class="subtitle">
+        </div>
+        <div class="subtitle">
             <h2>About <span>MDHL</span></h2>
             <figure class="logo">
                 <img src="../assets/images/logo-mighty-ducks-01.png" alt="logo">
             </figure>
-        </section>
+        </div>
     </header>
     <div class="container-nav-main">
         <nav>
@@ -59,7 +57,5 @@
                 parents and previous league members</p>
         </article>
     </main>
-
 </body>
-
 </html>
