--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +10,6 @@
     <link rel="shortcut icon" href="../assets/images/logo.ico" type="image/x-icon">
     <!-- estilos de diseño N°1 -->
     <!-- <link rel="stylesheet" href="../assets/styles/design1.css"> -->
-    <!-- Estilos ocultos -->
     <!-- estilos de diseño N°2 -->
     <!-- <link rel="stylesheet" href="../assets/styles/design2.css"> -->
     <!-- estilos de diseño N°3 -->
@@ -20,15 +18,15 @@
 </head>
 <body>
     <header>
-        <section class="banner">
+        <div class="banner">
             <h1 class="h1">Mighty Ducks Hockey League</h1>
-        </section>
-        <section class="subtitle">
+        </div>
+        <div class="subtitle">
             <h2>Contact</h2>
             <figure class="logo">
                 <img src="../assets/images/logo-mighty-ducks-01.png" alt="logo">
             </figure>
-        </section>
+        </div>
     </header>
     <div class="container-nav-main">
         <nav>
@@ -46,7 +44,5 @@
         <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
         <p>We reply to your email as soon as we can.</p>
     </main>
-
 </body>
-
 </html>
