--- a/assets/styles/design3.css
+++ b/assets/styles/design3.css
@@ -11,50 +11,50 @@ reducir uso de position x flexbox
 */
 
 /*header*/
-.logo {
-    position: absolute;
-    left: 40px;
-    top: 65px;
+header{
+    background-color: black;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    height: 80px;
+}
 
-    /* logo sobre parte baja de banner transform: translateY(-210px); */
+.logo{
+    margin-bottom: -30px;
+    
 }
 
 .logo img {
-    height: 150px;
-    width: 150px;
-}
-
-nav {
-    padding: 12px;
-    transform: translateY(-385px);
-    /* translate: 970px -345px; */
-    position: absolute;
-    position: fixed;
-    z-index: 2;
-    left: 920px;
+    height: 110px;
+    z-index: 99;
+    
 }
 
 nav a {
     color: #fbe42c;
     text-decoration: none;
     padding: 5px;
+    font-weight: bold;
+    word-wrap:initial;
 }
 
 nav a:hover {
-    color: #ffff;
+    color: #faf9f0;
     border-bottom: solid #ffff 2px;
     padding: 5px;
 }
 
+/*banner*/
 .banner {
     height: 300px;
     width: 100%;
-    position: relative;
     background-image: url(../images/design1_image1.jpg);
     background-position: center;
     background-size: cover;
-    top: 84px;
-    border-top: black solid 1px;
+    display: flex;
+    position: relative;
+    z-index: -1;
 }
 
 .banner img {
@@ -62,79 +62,84 @@ nav a:hover {
     height: 300px;
 }
 
-h1 {
-    position: absolute;
-    top: 0px;
-    font-size: 50px;
+.h1 {
     background: black;
-    padding: 6px;
-    padding-bottom: 18px;
-    border-top: solid rgb(5, 5, 5) 4px;
-
-    color: #fbe42c;
-    position: fixed;
-    text-indent: 25px;
-    text-transform: uppercase;
+    opacity: 0.5;  
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;   
 }
 
-.h1 {
-    z-index: 1;
-    width: 100%;
+h1 {
+    font-size: 50px;
+    padding: 6px;
+    color: #ffff;
+    text-transform: uppercase;
 }
 
 /*subtitle*/
 .subtitle {
-    position: relative;
-    top: 29px;
-    border-top: solid black 1px;
-    border-bottom: solid black 1px;
-    background-color: #5ca49c;
-    box-shadow: 0px 0.5px 0px 0px gray;
+    background-color: #5ca49c;   
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 80px;
+    box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
 }
 
 h2 {
-    height: 40px;
-    text-align: center;
-    padding-top: 16px;
     color: white;
     font-weight: bolder;
+    text-shadow: 1px 1px 1px rgba(32,32,32,0.3);
 }
 
 /*main*/
-.container-nav-main {
-    margin: 30px;
-    margin-top: 50px;
-    position: relative;
-}
-
 main {
-    width: 55%;
-    padding: 20px 40px 40px 40px;
-    position: absolute;
-    left: 20%;
-    border-left: solid gray 1px;
-    border-right: solid gray 1px;
-    /* rama3 */
-    /* background-image: url(../images/hockey3.jpg); */
+    display: flex;
+    justify-content: space-evenly;
+    padding: 50px;
 }
 
 main article p {
-    margin-bottom: 12px;
-    
+    margin-bottom: 10px;
+}
+
+article{
+    padding:20px;
+    background-color: #eeeee9;
+    border-radius: 15px 0 0 15px;
+    box-shadow: 1px 1px 1px 1px rgba(32,32,32,0.3);
+}
+
+.cont-radius{
+    border-radius: 15px;
+    box-shadow: 1px 1px 1px 1px rgba(32,32,32,0.3);
 }
 
 .img-hockey {
-    position: absolute;
-    right: 20px;
-    top: 10px;
+    padding:20px;
+    background-color: #eeeee9;
+    display: flex;
+    align-items: center;
+    border-radius: 0 15px 15px 0;
+    box-shadow: 1px 1px 1px 1px rgba(32,32,32,0.3);
+}
+
+.img-home{
+    width: 502px;
+    justify-content: center;
 }
 
 .img-hockey img {
-    height: 100px;
+    width: 400px;
+    box-shadow: rgb(0 0 0 / 24%) 0px 3px 8px;
 }
 
-.img-hockey img:hover {
-    height: 105px;
+.img-hockey-contact{
+    background-color:#5ca49c17;
+    border-radius: 15px;
 }
 
 p {
@@ -145,16 +150,28 @@ p {
 }
 
 /*game-info tabla*/
-table,
-th,
-td {
-    border: 1px solid black;
+table{
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+    align-items: center;
+    background-color:white;
+}
+
+table, th,td {
     border-spacing: 10px;
     padding: 5px;
 }
 
-/*rules - listas*/
+.italic{
+    font-style: italic;
+}
 
+.underline{
+    text-decoration: underline;
+}
+
+/*rules - listas*/
 ul{
     text-align: justify;
     padding: 0px 0px 10px 30px;
